Tweaked the way the variable damage is printed in the Battle class
In python, you can concatenate numbers to strings in 'print' calls using commas (i.e. "string1",int,"string2") which is a little more concise than "string1"+str(int)+"string2".

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-
-*.pyc
+.idea/libraries/R_User_Library.xml*.iml.idea/workspace.xml*.pyc
+__pycache__/Wind.cpython-36.pyc
 .idea/libraries/R_User_Library.xml
-*.iml
-.idea/workspace.xml
