--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .idea/libraries/R_User_Library.xml*.iml.idea/workspace.xml*.pyc
 __pycache__/Wind.cpython-36.pyc
 .idea/libraries/R_User_Library.xml
+
+/.idea/workspace.xml
